src/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raw</fullName>
                <default>true</default>
                <label>Raw</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <label>Qualified (now)</label>
            </value>
            <value>
                <fullName>Nurture</fullName>
                <label>Nurture (not now)</label>
            </value>
            <value>
                <fullName>Unqualified</fullName>
                <label>Unqualified (never)</label>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>