src/objects/Contact/fields/pradeepNumber__c.field-meta.xml
<CustomField>
    <fullName>pradeepNumber__c</fullName>
    <description>pradeepNumber description</description>
    <inlineHelpText>pradeepNumberhelptext</inlineHelpText>
    <label>pradeepNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>