src/objects/Contact/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the person that referred this individual?</inlineHelpText>
    <label>Referrer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>