src/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>