src/objects/Contact/fields/X03sep__c.field-meta.xml
<CustomField>
    <fullName>X03sep__c</fullName>
    <description>03sepdesc</description>
    <inlineHelpText>03sephelp</inlineHelpText>
    <label>03sep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>